@@ -7,7 +7,7 @@ class MonerisTest < Test::Unit::TestCase
     Base.mode = :test
 
     @gateway = MonerisGateway.new(
-      :login => 'store1',
+      :login => 'store3',
       :password => 'yesguy'
     )
 
@@ -18,7 +18,7 @@ class MonerisTest < Test::Unit::TestCase
 
   def test_default_options
     assert_equal 7, @gateway.options[:crypt_type]
-    assert_equal 'store1', @gateway.options[:login]
+    assert_equal 'store3', @gateway.options[:login]
     assert_equal 'yesguy', @gateway.options[:password]
   end
 
@@ -28,6 +28,65 @@ class MonerisTest < Test::Unit::TestCase
     assert response = @gateway.purchase(100, @credit_card, @options)
     assert_success response
     assert_equal '58-0_3;1026.1', response.authorization
+  end
+
+  def test_successful_first_purchase_with_credential_on_file
+    gateway = MonerisGateway.new(
+      :login => 'store3',
+      :password => 'yesguy',
+      :cof_enabled => true
+    )
+    gateway.expects(:ssl_post).returns(successful_first_cof_purchase_response)
+    assert response = gateway.purchase(
+      @amount,
+      @credit_card,
+      @options.merge(
+        issuer_id: '',
+        payment_indicator: 'C',
+        payment_information: '0'
+      )
+    )
+    assert_success response
+    assert_equal 'Approved', response.message
+    assert_false response.authorization.blank?
+    assert_not_empty response.params['issuer_id']
+  end
+
+  def test_successful_subsequent_purchase_with_credential_on_file
+    gateway = MonerisGateway.new(
+      :login => 'store3',
+      :password => 'yesguy',
+      :cof_enabled => true
+    )
+    gateway.expects(:ssl_post).returns(successful_first_cof_authorize_response)
+    assert response = gateway.authorize(
+      @amount,
+      @credit_card,
+      @options.merge(
+        issuer_id: '',
+        payment_indicator: 'C',
+        payment_information: '0'
+      )
+    )
+    assert_success response
+    assert_equal 'Approved', response.message
+    assert_false response.authorization.blank?
+
+    gateway.expects(:ssl_post).returns(successful_subsequent_cof_purchase_response)
+
+    assert response2 = gateway.purchase(
+      @amount,
+      @credit_card,
+      @options.merge(
+        order_id: response.authorization,
+        issuer_id: response.params['issuer_id'],
+        payment_indicator: 'U',
+        payment_information: '2'
+      )
+    )
+    assert_success response2
+    assert_equal 'Approved', response2.message
+    assert_false response2.authorization.blank?
   end
 
   def test_successful_purchase_with_network_tokenization
@@ -357,6 +416,92 @@ class MonerisTest < Test::Unit::TestCase
   </receipt>
 </response>
 
+    RESPONSE
+  end
+
+  def successful_first_cof_purchase_response
+    <<-RESPONSE
+<?xml version=\"1.0\" standalone=\"yes\"?>
+<?xml version=“1.0” standalone=“yes”?>
+<response>
+ <receipt>
+   <ReceiptId>a33ba7edd448b91ef8d2f85fea614b8d</ReceiptId>
+   <ReferenceNum>660114080015099160</ReferenceNum>
+   <ResponseCode>027</ResponseCode>
+   <ISO>01</ISO>
+   <AuthCode>822665</AuthCode>
+   <TransTime>07:43:28</TransTime>
+   <TransDate>2018-11-11</TransDate>
+   <TransType>00</TransType>
+   <Complete>true</Complete>
+   <Message>APPROVED           *                    =</Message>
+   <TransAmount>1.00</TransAmount>
+   <CardType>V</CardType>
+   <TransID>799655-0_11</TransID>
+   <TimedOut>false</TimedOut>
+   <BankTotals>null</BankTotals>
+   <Ticket>null</Ticket>
+   <IssuerId>355689484440192</IssuerId>
+   <IsVisaDebit>false</IsVisaDebit>
+ </receipt>
+</response>
+    RESPONSE
+  end
+
+  def successful_first_cof_authorize_response
+    <<-RESPONSE
+<?xml version=\"1.0\" standalone=\"yes\"?>
+<response>
+  <receipt>
+    <ReceiptId>8dbc28468af2007779bbede7ec1bab6c</ReceiptId>
+    <ReferenceNum>660109300018229130</ReferenceNum>
+    <ResponseCode>027</ResponseCode>
+    <ISO>01</ISO>
+    <AuthCode>718280</AuthCode>
+    <TransTime>07:50:53</TransTime>
+    <TransDate>2018-11-11</TransDate>
+    <TransType>01</TransType>
+    <Complete>true</Complete>
+    <Message>APPROVED           *                    =</Message>
+    <TransAmount>1.00</TransAmount>
+    <CardType>V</CardType>
+    <TransID>830724-0_11</TransID>
+    <TimedOut>false</TimedOut>
+    <BankTotals>null</BankTotals>
+    <Ticket>null</Ticket>
+    <MessageId>1A8315282537312</MessageId>
+    <IssuerId>550923784451193</IssuerId>
+    <IsVisaDebit>false</IsVisaDebit>
+  </receipt>
+</response>
+    RESPONSE
+  end
+
+  def successful_subsequent_cof_purchase_response
+    <<-RESPONSE
+<?xml version="1.0" standalone="yes"?>
+<response>
+  <receipt>
+    <ReceiptId>830724-0_11;8dbc28468af2007779bbede7ec1bab6c</ReceiptId>
+    <ReferenceNum>660109490014038930</ReferenceNum>
+    <ResponseCode>027</ResponseCode>
+    <ISO>01</ISO>
+    <AuthCode>111234</AuthCode>
+    <TransTime>07:50:54</TransTime>
+    <TransDate>2018-11-11</TransDate>
+    <TransType>00</TransType>
+    <Complete>true</Complete>
+    <Message>APPROVED           *                    =</Message>
+    <TransAmount>1.00</TransAmount>
+    <CardType>V</CardType>
+    <TransID>455422-0_11</TransID>
+    <TimedOut>false</TimedOut>
+    <BankTotals>null</BankTotals>
+    <Ticket>null</Ticket>
+    <IssuerId>762097792112819</IssuerId>
+    <IsVisaDebit>false</IsVisaDebit>
+  </receipt>
+</response>
     RESPONSE
   end
 
